--- a/src/.tx/config
+++ b/src/.tx/config
@@ -64,3 +64,9 @@ trans.es_ES = e_cidadania/locale/es_ES/LC_MESSAGES/django.po
 trans.gl_ES = e_cidadania/locale/gl_ES/LC_MESSAGES/django.po
 trans.fr = e_cidadania/locale/fr_FR/LC_MESSAGES/django.po
 
+[ecidadania.voting]
+source_file = apps/ecidadania/voting/locale/en_GB/LC_MESSAGES/django.po
+source_lang = en_GB
+trans.es_ES = apps/ecidadania/voting/locale/es_ES/LC_MESSAGES/django.po
+trans.gl_ES = apps/ecidadania/voting/locale/gl_ES/LC_MESSAGES/django.po
+trans.fr = apps/ecidadania/voting/locale/fr_FR/LC_MESSAGES/django.po
