--- a/private/templates/IFRC_Train/tasks.cfg
+++ b/private/templates/IFRC_Train/tasks.cfg
@@ -23,20 +23,6 @@ org,office_type,IFRC/office_type.csv,office_type.xsl
 org,organisation,IFRC/organisation.csv,organisation.xsl
 auth,organisation,IFRC/organisation.csv,organisation.xsl
 # -----------------------------------------------------------------------------
-# HRM
-#hrm,skill,IFRC/SkillList.csv,skill.xsl
-#hrm,competency_rating,IFRC/SkillCompetency.csv,competency_rating.xsl
-hrm,skill,default/DefaultSkillList.csv,skill.xsl
-hrm,competency_rating,default/DefaultSkillCompetency.csv,competency_rating.xsl
-hrm,course,IFRC/course.csv,course.xsl
-hrm,job_title,IFRC/job_title.csv,job_title.xsl
-hrm,programme,IFRC/hrm_programme.csv,programme.xsl
-hrm,person,staff.csv,person.xsl,"{'Type':'Staff'}"
-hrm,person,volunteers.csv,person.xsl,"{'Type':'Volunteer'}"
-#hrm,person,users.csv,person.xsl
-hrm,training,training.csv,training.xsl
-hrm,programme_hours,hrm_programme_hours.csv,programme_hours.xsl
-# -----------------------------------------------------------------------------
 # Users
 auth,user,regression/masterUsers.csv,user.xsl
 auth,user,users.csv,user.xsl
@@ -78,6 +64,21 @@ gis,layer_symbology,IFRC/gis_layer_georss.csv,layer_georss.xsl
 gis,layer_config,IFRC/gis_layer_kml.csv,layer_kml.xsl
 gis,layer_symbology,IFRC/gis_layer_kml.csv,layer_kml.xsl
 gis,layer_config,default/gis_layer_coordinate.csv,layer_coordinate.xsl
+# -----------------------------------------------------------------------------
+# HRM
+#hrm,skill,IFRC/SkillList.csv,skill.xsl
+#hrm,competency_rating,IFRC/SkillCompetency.csv,competency_rating.xsl
+hrm,skill,default/DefaultSkillList.csv,skill.xsl
+hrm,competency_rating,default/DefaultSkillCompetency.csv,competency_rating.xsl
+hrm,course,IFRC/course.csv,course.xsl
+hrm,job_title,IFRC/job_title.csv,job_title.xsl
+hrm,programme,IFRC/hrm_programme.csv,programme.xsl
+hrm,person,staff.csv,person.xsl,"{'Type':'Staff'}"
+hrm,person,volunteers.csv,person.xsl,"{'Type':'Volunteer'}"
+# Associate Users with Organisations (not working)
+hrm,person,users.csv,person.xsl
+hrm,training,training.csv,training.xsl
+hrm,programme_hours,hrm_programme_hours.csv,programme_hours.xsl
 # -----------------------------------------------------------------------------
 # Project Tool
 *,import_role,roles/project_roles.csv
