--- a/private/templates/Sandy/tasks.cfg
+++ b/private/templates/Sandy/tasks.cfg
@@ -39,7 +39,7 @@ gis,layer_config,default/gis_layer_coordinate.csv,layer_coordinate.xsl
 gis,location,locations/US_L0.csv,location.xsl
 gis,location,locations/US_L1.csv,location.xsl
 # -----------------------------------------------------------------------------
-cms,post,cms_post.csv,post.xsl
+cms,post,default/cms_post.csv,post.xsl
 # -----------------------------------------------------------------------------
 org,sector,default/org_sector.csv,sector.xsl
 org,organisation_type,default/organisation_type.csv,organisation_type.xsl
