--- a/private/templates/Sandy/tasks.cfg
+++ b/private/templates/Sandy/tasks.cfg
@@ -13,6 +13,8 @@
 #     zzz_1st_run
 #     s3Tools::S3BulkImporter
 ##########################################################################
+# Roles
+*,import_role,auth_roles.csv
 # Users
 auth,user,regression/masterUsers.csv,user.xsl
 # GIS
