--- a/private/templates/ARC/tasks.cfg
+++ b/private/templates/ARC/tasks.cfg
@@ -16,6 +16,9 @@
 # Roles
 *,import_role,IFRC/auth_roles.csv
 # -----------------------------------------------------------------------------
+# Users
+auth,user,regression/masterUsers.csv,user.xsl
+# -----------------------------------------------------------------------------
 # Org
 org,sector,IFRC/org_sector.csv,sector.xsl
 org,organisation_type,default/organisation_type.csv,organisation_type.xsl
@@ -60,8 +63,9 @@ gis,layer_config,default/gis_layer_coordinate.csv,layer_coordinate.xsl
 #hrm,job_title,IFRC/job_title.csv,job_title.xsl
 #hrm,programme,IFRC/hrm_programme.csv,programme.xsl
 # -----------------------------------------------------------------------------
-# Member
-#member,membership_type,membership_type.csv,membership_type.xsl
+# CR
+cr,shelter_type,cr_shelter_type.csv,shelter_type.xsl
+cr,shelter_service,cr_shelter_service.csv,shelter_service.xsl
 # -----------------------------------------------------------------------------
 # ADAT
 # Add the survey templates
