--- a/private/templates/OCHA/tasks.cfg
+++ b/private/templates/OCHA/tasks.cfg
@@ -14,10 +14,10 @@
 #     s3Tools::S3BulkImporter
 ##########################################################################
 # Roles
-*,import_role,auth_roles.csv
+#*,import_role,auth_roles.csv
 # -----------------------------------------------------------------------------
 # Users
-auth,user,regression/masterUsers.csv,user.xsl
+#auth,user,regression/masterUsers.csv,user.xsl
 # -----------------------------------------------------------------------------
 # Org
 org,sector,IFRC/org_sector.csv,sector.xsl
@@ -30,35 +30,34 @@ org,organisation,organisation.csv,organisation.xsl
 #  Projections
 gis,projection,default/gis_projection.csv,projection.xsl
 #  Markers
-gis,marker,OCHA/gis_marker.csv,marker.xsl
+gis,marker,gis_marker.csv,marker.xsl
 #  Symbology
 gis,symbology,default/gis_symbology.csv,symbology.xsl
 # Locations
-gis,location,locations/BI_L1.csv,location.xsl
-gis,location,locations/CF_L1.csv,location.xsl
+#gis,location,locations/BI_L1.csv,location.xsl
+#gis,location,locations/CF_L1.csv,location.xsl
 gis,location,locations/KE_L1.csv,location.xsl
-gis,location,locations/TD_L1.csv,location.xsl
+#gis,location,locations/TD_L1.csv,location.xsl
 # GIS Config (refers to Locations)
 gis,config,gis_config.csv,config.xsl
 gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
 # GIS Menu
-gis,menu,gis_menu.csv,menu.xsl
+#gis,menu,gis_menu.csv,menu.xsl
 # Layers
 gis,layer_config,default/gis_layer_empty.csv,layer_empty.xsl
 gis,layer_config,gis_layer_feature.csv,layer_feature.xsl
 gis,layer_symbology,gis_layer_feature.csv,layer_feature.xsl
-gis,layer_config,gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
-gis,layer_config,gis_layer_openweathermap.csv,layer_openweathermap.xsl
-gis,layer_config,gis_layer_bing.csv,layer_bing.xsl
-gis,layer_config,gis_layer_coordinate.csv,layer_coordinate.xsl
+gis,layer_config,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
+gis,layer_config,default/gis_layer_openweathermap.csv,layer_openweathermap.xsl
+gis,layer_config,default/gis_layer_coordinate.csv,layer_coordinate.xsl
 # -----------------------------------------------------------------------------
 # Project Tool
-project,status,OCHA/project_status.csv,status.xsl
+project,status,project_status.csv,status.xsl
 project,activity_type,IFRC/project_activity_type.csv,activity_type.xsl
 project,hazard,IFRC/project_hazard.csv,hazard.xsl
 project,theme,IFRC/project_theme.csv,theme.xsl
 project,beneficiary_type,IFRC/project_beneficiary_type.csv,beneficiary_type.xsl
 # -----------------------------------------------------------------------------
 # Shelters
-cr,shelter_type,default/shelter_type.csv,shelter_type.xsl
+#cr,shelter_type,default/shelter_type.csv,shelter_type.xsl
 # END -------------------------------------------------------------------------
