--- a/private/templates/HelpNY/tasks.cfg
+++ b/private/templates/HelpNY/tasks.cfg
@@ -62,4 +62,6 @@ supply,catalog_item,catalog_item.csv,catalog_item.xsl
 #project,theme,default/project_theme.csv,theme.xsl
 #project,beneficiary_type,default/project_beneficiary_type.csv,beneficiary_type.xsl
 #cr,shelter_type,default/shelter_type.csv,shelter_type.xsl
+org,organisation,organisation.csv,organisation.xsl
+inv,warehouse,warehouse.csv,warehouse.xsl
 # END -------------------------------------------------------------------------
