--- a/private/templates/HelpNY/tasks.cfg
+++ b/private/templates/HelpNY/tasks.cfg
@@ -16,7 +16,7 @@
 # Roles
 *,import_role,auth_roles.csv
 # Users
-#auth,user,regression/masterUsers.csv,user.xsl
+auth,user,regression/masterUsers.csv,user.xsl
 # GIS
 #  Projections
 gis,projection,default/gis_projection.csv,projection.xsl
@@ -49,7 +49,7 @@ org,sector,default/org_sector.csv,sector.xsl
 org,organisation_type,default/organisation_type.csv,organisation_type.xsl
 org,office_type,default/office_type.csv,office_type.xsl
 supply,catalog_item,catalog_item.csv,catalog_item.xsl
-#hrm,skill,default/DefaultSkillList.csv,skill.xsl
+hrm,skill,SkillList.csv,skill.xsl
 ##hrm,skill,default/DrivingSkillList.csv,skill.xsl
 ##hrm,skill,default/LanguageSkillList.csv,skill.xsl
 #hrm,competency_rating,default/DefaultSkillCompetency.csv,competency_rating.xsl
